--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,14 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+        
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.4.1
+    
+      - name: Install and Build
+        run: |
+          npm ci
+          npm run build
 
       # Runs a set of commands using the runners shell
       - name: Deploy to GitHub Pages
