--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "vue": "^3.2.40",
     "vue-matomo": "^4.2.0",
     "vue-router": "^4.1.5"
